--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,7 @@
 {
   "semi": false,
-  "singleQuote": true
+  "arrowParens": "always",
+  "singleQuote": true,
+  "printWidth": 100,
+  "proseWrap": "never"
 }
